# mini-agent

./: .gitignore  Cargo.toml  Dockerfile  readme.md
.github/workflows/: code-checking.yml  release.yml
mini-agent/: CHANGELOG.md  Cargo.toml  readme.md
mini-agent-core/: CHANGELOG.md  Cargo.toml
mini-agent-core/src/: lib.rs  prelude.rs
mini-agent-core/src/event/: log.rs  metric.rs  mod.rs
mini-agent-core/src/time/: mod.rs
mini-agent-sink-console/: CHANGELOG.md  Cargo.toml
mini-agent-sink-console/src/: lib.rs
mini-agent-sink-datadog/: CHANGELOG.md  Cargo.toml
mini-agent-sink-datadog/src/: lib.rs
mini-agent-sink-prelude/: CHANGELOG.md  Cargo.toml
mini-agent-sink-prelude/src/: batch.rs  lib.rs  prelude.rs  single.rs
mini-agent-source-http-server/: CHANGELOG.md  Cargo.toml
mini-agent-source-http-server/src/: lib.rs
mini-agent-source-prelude/: CHANGELOG.md  Cargo.toml
mini-agent-source-prelude/src/: lib.rs  prelude.rs  timer.rs
mini-agent-source-random-logs/: CHANGELOG.md  Cargo.toml
mini-agent-source-random-logs/src/: lib.rs
mini-agent-source-random-metrics/: CHANGELOG.md  Cargo.toml
mini-agent-source-random-metrics/src/: lib.rs
mini-agent-source-sysinfo/: CHANGELOG.md  Cargo.toml
mini-agent-source-sysinfo/src/: lib.rs
mini-agent-source-timer/: Cargo.toml
mini-agent-source-timer/src/: lib.rs
mini-agent-transform-filter/: CHANGELOG.md  Cargo.toml
mini-agent-transform-filter/src/: lib.rs
mini-agent-transform-prelude/: CHANGELOG.md  Cargo.toml
mini-agent-transform-prelude/src/: prelude.rs
mini-agent/assets/: config.toml
mini-agent/assets/scripts/: postinst  preinst
mini-agent/assets/systemd/: mini-agent.default  mini-agent.service
mini-agent/src/: config.rs  main.rs
mini-agent/src/sink/: console.rs  datadog.rs  mod.rs  prelude.rs
mini-agent/src/source/: mod.rs  prelude.rs  sysinfo.rs  timer.rs
mini-agent/src/transform/: mod.rs
src/: config.rs  main.rs  prelude.rs
src/event/: mod.rs
src/sink/: console.rs  datadog.rs  prelude.rs
src/source/: sysinfo.rs  timer.rs
