[package]
name = "victor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
clap = { version = "4.4.8", features = ["derive"] }
futures = "0.3"
futures-core = "*"
reqwest = { version = "*", features = ["json"] }
serde = { version = "*", features = ["derive"] }
sysinfo = { version = "*" }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
toml = "*"
