[workspace]
members = [
    "./mini-agent",
    "./mini-agent-core",
    # source
    "./mini-agent-source-prelude",
    "./mini-agent-source-sysinfo",
    "./mini-agent-source-timer",
    # sink
    "./mini-agent-sink-prelude",
    "./mini-agent-sink-console",
    "./mini-agent-sink-datadog", "mini-agent-source-http-server",
]
resolver = "2"
