[workspace]
members = [
    "./mini-agent",
    "./mini-agent-core",
    # source
    "./mini-agent-source-prelude",
    "./mini-agent-source-http-server",
    "./mini-agent-source-random-logs",
    "./mini-agent-source-random-metrics",
    "./mini-agent-source-sysinfo",
    # sink
    "./mini-agent-sink-prelude",
    "./mini-agent-sink-console",
    "./mini-agent-sink-datadog",
    # transform
    "./mini-agent-transform-prelude",
    "./mini-agent-transform-filter",
]
resolver = "2"
