[package]
name = "mini-agent-source-sysinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mini-agent-core = { version = "*", path = "../mini-agent-core" }
mini-agent-source-prelude = { version = "*", path = "../mini-agent-source-prelude" }

futures = { version = "0.3", default-features = false, features = [
    "async-await",
] }
sysinfo = { version = "0.29" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", default-features = false }
