[package]
name = "mini-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mini-agent-core = { version = "*", path = "../mini-agent-core" }

clap = { version = "4.4", features = ["derive"] }
futures = { version = "0.3", default-features = false, features = [
    "async-await",
] }
reqwest = { version = "0.11", default-features = false, features = [
    "gzip",
    "json",
    "rustls-tls-webpki-roots",
    "trust-dns",
] }
serde = { version = "1.0", features = ["derive"] }
sysinfo = { version = "0.29" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.8", features = ["preserve_order"] }
