[package]
name = "mini-agent"
description = "A simple agent that takes metrics from one place to another."
readme = "readme.md"
version = "0.1.0"
edition = "2021"

[package.metadata.deb]
maintainer = "Jeremie Drouet <jeremie.drouet@gmail.com>"
copyright = "2017, Jeremie Drouet <jeremie.drouet@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = "A simple agent that takes metrics from one place to another."
depends = "$auto"
section = "utility"
priority = "optional"
maintainer-scripts = "assets/scripts/"
assets = [
    [
        "assets/config.toml",
        "etc/mini-agent/config.toml",
        "644",
    ],
    [
        "target/release/mini-agent",
        "usr/bin/",
        "755",
    ],
    [
        "assets/systemd/mini-agent.service",
        "/lib/systemd/system/mini-agent.service",
        "644",
    ],
    [
        "assets/systemd/mini-agent.default",
        "/etc/default/mini-agent",
        "600",
    ],
    [
        "readme.md",
        "usr/share/doc/mini-agent/README",
        "644",
    ],
]

[package.metadata.deb.systemd-units]
unit-scripts = "assets/systemd/"
enable = false
start = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mini-agent-core = { version = "*", path = "../mini-agent-core" }
mini-agent-sink-prelude = { version = "*", path = "../mini-agent-sink-prelude" }
mini-agent-sink-console = { version = "*", path = "../mini-agent-sink-console" }
mini-agent-sink-datadog = { version = "*", path = "../mini-agent-sink-datadog" }
mini-agent-source-prelude = { version = "*", path = "../mini-agent-source-prelude" }
mini-agent-source-http-server = { version = "*", path = "../mini-agent-source-http-server" }
mini-agent-source-random-logs = { version = "*", path = "../mini-agent-source-random-logs" }
mini-agent-source-random-metrics = { version = "*", path = "../mini-agent-source-random-metrics" }
mini-agent-source-sysinfo = { version = "*", path = "../mini-agent-source-sysinfo" }
mini-agent-transform-prelude = { version = "*", path = "../mini-agent-transform-prelude" }
mini-agent-transform-filter = { version = "*", path = "../mini-agent-transform-filter" }

clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
toml = { version = "0.8", features = ["preserve_order"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
